--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==2.1.5
 django-cors-headers==3.1.1
 django-sslserver==0.20
 fuzzywuzzy==0.17.0
-psycopg2==2.8.4
+psycopg2-binary==2.8.6
 pymongo==3.7.2
 python-dotenv==0.10.3
 pytz==2018.6
